syntax = "proto3";
import "stdlib.proto";

option java_multiple_files = true;
option java_package = "sila2.com.wega-it.common.barcodeReader";
option java_outer_classname = "Matrix200Proto";
option objc_class_prefix = "MTX";

package sila2.org.sila_standard.release_candidate.canReadCode;

service canReadCode {
// A simple RPC.
  //
  // returns a scan Barode .
    
  rpc readCodeWithException(Empty) returns (ScannerResponse) {}      
  rpc readCode(ScannerRequest) returns (ScannerResponse) {}      
}


  //
  // returns a scan Barode .
service canReadCodeContinuously {
	rpc startReading (ScannerRequest) returns (stream ScannerResponse) {}  
	rpc stopReading (ScannerRequest) returns (ScannerResponse) {}  
}

service readCodeContinuously {
	rpc openReader (stream ScannerContinousRequest) returns (stream ScannerResponse) {}  	
}


// BarocdePoints are represented as latitude-longitude pairs in the E7 representation
// (degrees multiplied by 10**7 and rounded to the nearest integer).
// Latitudes should be in the range +/- 90 degrees and longitude should be in
// the range +/- 180 degrees (inclusive).
message ScannerResponse {
  string barocde = 1;
  int32 errorCode = 2;
  string errorMessage = 3;
}

message ScannerRequest {
	string id = 1;
	string emptyBarocdeString = 2;
}


message ScannerContinousRequest {
	string id = 1;
	string command = 2;
}
