// Standard Library Package
// Contains the basic messages

syntax = "proto3";


// Standard Library Package
package org.sila_standard.v2.realease_candidate.stdlib;


// Wrapper for basic types

// Empty Message
// Used for Properties or
message Void
{
    SiLA_Metadata metadata = 1;
}

// String Message
message String
{
    SiLA_Metadata metadata = 1;
    string value = 2;
}

// Integer Message
message Integer
{
    SiLA_Metadata metadata = 1;
    int64 value = 2;
}

// Real Number Message
message RealNumbber
{
    SiLA_Metadata metadata = 1;
    double value = 2;
}

// Complex Number
message ComplexNumber
{
    SiLA_Metadata metadata = 1;
    double real_value = 2;
    double imaginary_value = 3;
}

// Physical Value
message PhysicalValue
{
    SiLA_Metadata metadata = 1;
    double value = 2;
    Unit unit = 3;
}

// Unit Message
message Unit
{
    SiLA_Metadata metadata = 1;
    string value = 2;
}

// Boolean Message
message Boolean
{
    SiLA_Metadata metadata = 1;
    bool value = 2;
}

// Date Message
message Date
{
    SiLA_Metadata metadata = 1;
    string value = 2;
}


// Complex SiLA Messages

// SiLA Metaddata as described in the Specification
// Required: progress
// Optional: estimated_duration
message SiLA_Metadata
{
    double progress = 1;
    PhysicalValue estimated_duration = 2;	
}


// Error Message as described in the Specification
message SiLA_Error_Message
{
    // Error type
    string type = 1;

    // Human-readable desription of the error
    string description = 2;

    // Standard Error Name
    string standard_error_name = 3;

    // URI for Error Handling Feature
    string redirect = 4;
}

// Property Request Message to hold information
// on the Threshold and Frequency when subscribing to
// a Property
message SiLA_Property_Request
{
    PhysicalValue frequency = 1;
    PhysicalValue threshold = 2;
}
